--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -11,14 +11,16 @@
   </head>
 
   <body>
-    <% if flash[:notice]  %>
-      <div class="notification is-primary global-notification"><div>
-      <p class = "notice"><%= notice %></p>
-    <% end  %>
-    <% if flash[:notice]  %>
-      <div class="notification is-danger global-notification"><div>
-      <p class = "alert"><%= alert %></p>
-    <% end  %>
+    <% if flash[:notice] %>
+    	<div class="notification is-primary global-notification">
+    		<p class="notice"><%= notice %></p>
+    	</div>
+    <% end %>
+    <% if flash[:alert] %>
+    	<div class="notification is-danger global-notification">
+    		<p class="alert"><%= alert %></p>
+    	</div>
+    <% end %>
 
     <nav class="navbar is-info">
       <div class="navbar-brand">
